added vocabulary in appdata

--- a/app/src/main/res/layout/fragment_game_menu.xml
+++ b/app/src/main/res/layout/fragment_game_menu.xml
@@ -8,8 +8,8 @@
 
     <VideoView
         android:id="@+id/videoview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
