--- a/app/src/main/res/layout/fragment_pronunciation_default_translation.xml
+++ b/app/src/main/res/layout/fragment_pronunciation_default_translation.xml
@@ -79,6 +79,7 @@
                             android:clickable="false"
                             android:cursorVisible="false"
                             android:textSize="20sp"
+                            android:textColor="@color/black"
                             android:text="William Robert"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -104,6 +105,7 @@
                             android:clickable="false"
                             android:cursorVisible="false"
                             android:textSize="20sp"
+                            android:textColor="@color/black"
                             android:text="William Robert"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -141,6 +143,7 @@
                         android:clickable="false"
                         android:cursorVisible="false"
                         android:textSize="16sp"
+                        android:textColor="@color/black"
                         android:text="Lorem Ipsum is simply em Ips"
                         android:layout_width="match_parent"
                         android:maxLines="3"
@@ -169,6 +172,7 @@
                         android:inputType="textMultiLine"
                         android:maxLines="3"
                         android:minLines="3"
+                        android:textColor="@color/black"
                         android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry."
                         android:textSize="16sp">
 
