--- a/app/src/main/res/layout/fragment_vocabulary_phrases.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_phrases.xml
@@ -24,6 +24,7 @@
         android:layout_alignBottom="@id/back"
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="30dp"
+        android:textColor="@color/black"
         android:background="@drawable/rounded_textview" />
 
     <androidx.recyclerview.widget.RecyclerView
