--- a/app/src/main/res/layout/fragment_vocabulary_phrases_translation.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_phrases_translation.xml
@@ -63,6 +63,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tvEnglish"
                     android:inputType="textMultiLine"
+                    android:textColor="@color/black"
                     android:focusable="false"
                     android:clickable="false"
                     android:cursorVisible="false"
@@ -91,6 +92,7 @@
                     android:focusable="false"
                     android:clickable="false"
                     android:cursorVisible="false"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:text="William Robert"
                     android:layout_width="match_parent"
