--- a/app/src/main/res/layout/fragment_vocabulary_words_translation.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_words_translation.xml
@@ -67,6 +67,7 @@
                         android:focusable="false"
                         android:clickable="false"
                         android:cursorVisible="false"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
                         android:text="William Robert"
                         android:layout_width="match_parent"
@@ -92,6 +93,7 @@
                         android:focusable="false"
                         android:clickable="false"
                         android:cursorVisible="false"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
                         android:text="William Robert"
                         android:layout_width="match_parent"
