--- a/app/src/main/res/layout/game_complete_dialog.xml
+++ b/app/src/main/res/layout/game_complete_dialog.xml
@@ -19,6 +19,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:background="@color/white"
             android:layout_height="match_parent">
 
             <TextView
