--- a/app/src/main/res/layout/vocabulary_layout.xml
+++ b/app/src/main/res/layout/vocabulary_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
+        android:textColor="@color/black"
         android:background="@drawable/rounded_textview"
-        android:text="mama mo"
         />
 </RelativeLayout>
