--- a/app/src/main/res/layout/fragment_pronunciation_default_translation.xml
+++ b/app/src/main/res/layout/fragment_pronunciation_default_translation.xml
@@ -11,40 +11,19 @@
         android:layout_height="match_parent"
         android:background="@drawable/bg">
 
-        <RelativeLayout
-            android:id="@+id/rlBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
 
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentTop="true"
-                android:src="@drawable/button_back" />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rlBack">
 
             <LinearLayout
-                android:id="@+id/pronunciationTranslation"
+                android:id="@+id/words"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
+                tools:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:orientation="horizontal"
+                android:background="@drawable/pronunciation_bg2"
                 android:weightSum="100">
 
                 <ImageView
@@ -60,6 +39,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
+                    android:gravity="center"
                     android:layout_weight="50">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -70,6 +50,9 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="32dp"
+                        android:layout_gravity="center"
+                        android:textColorHint="@color/black"
+                        app:boxStrokeColor="@color/black"
                         android:hint="English">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -96,6 +79,9 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="32dp"
+                        android:layout_gravity="center"
+                        android:textColorHint="@color/black"
+                        app:boxStrokeColor="@color/black"
                         android:hint="Mandaya">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -117,64 +103,77 @@
 
             </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/phrase"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            tools:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:orientation="horizontal"
+            android:background="@drawable/pronunciation_bg2">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                android:layout_weight="50"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:weightSum="100">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:id="@+id/layoutEnglishPhrase"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="50"
-                    android:hint="English Phrase">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="64dp"
+                    android:layout_gravity="center"
+                    android:textColorHint="@color/black"
+                    app:boxStrokeColor="@color/black"
+                    android:hint="English">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/tvEnglishPhrase"
-                        android:inputType="textMultiLine"
-                        android:focusable="false"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:clickable="false"
                         android:cursorVisible="false"
-                        android:textSize="16sp"
+                        android:focusable="false"
+                        android:inputType="textMultiLine"
+                        android:minLines="2"
+                        android:text="Wsfsldfjldsfjdlsfjdlsfjdslkfjdslkfjsdlfkjsdlkfjlsdfjsldkfjslkfjfjsklfjslfkjs"
                         android:textColor="@color/black"
-                        android:text="Lorem Ipsum is simply em Ips"
-                        android:layout_width="match_parent"
-                        android:maxLines="3"
-                        android:layout_height="match_parent">
+                        android:textSize="20sp">
 
                     </com.google.android.material.textfield.TextInputEditText>
+
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:id="@+id/layoutMandayaPhrase"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="50"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginStart="10dp"
-                    android:hint="Mandaya Phrase">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="64dp"
+                    android:layout_gravity="center"
+                    android:textColorHint="@color/black"
+                    app:boxStrokeColor="@color/black"
+                    android:hint="Mandaya">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/tvMandayaPhrase"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:inputType="textMultiLine"
+                        android:focusable="false"
                         android:clickable="false"
                         android:cursorVisible="false"
-                        android:focusable="false"
-                        android:inputType="textMultiLine"
-                        android:maxLines="3"
-                        android:minLines="3"
+                        android:textSize="20sp"
                         android:textColor="@color/black"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-                        android:textSize="16sp">
+                        android:minLines="2"
+                        android:text="skldjslkfhjsdlkfhjsdlkfhdslkfhsdlfkhsdlkfhsldhfsd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                     </com.google.android.material.textfield.TextInputEditText>
 
@@ -183,10 +182,63 @@
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:id="@+id/rlBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/button_back" />
 
+        </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/rlDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ImageView
+                android:id="@+id/down"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:rotation="270"
+                android:src="@drawable/button_back" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ImageView
+                android:id="@+id/up"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:rotation="90"
+                android:src="@drawable/button_back" />
+
+        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
 
