--- a/app/src/main/res/layout/fragment_vocabulary_words_translation.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_words_translation.xml
@@ -58,6 +58,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
+                    android:textColorHint="@color/black"
+                    app:boxStrokeColor="@color/black"
                     android:layout_marginEnd="32dp"
                     android:hint="English">
 
@@ -84,7 +86,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
+                    android:textColorHint="@color/black"
                     android:layout_marginEnd="32dp"
+                    app:boxStrokeColor="@color/black"
                     android:hint="Mandaya">
 
                     <com.google.android.material.textfield.TextInputEditText
