--- a/app/src/main/res/layout/fragment_highscore.xml
+++ b/app/src/main/res/layout/fragment_highscore.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/blackboard"
         android:layout_marginBottom="20dp"
         android:orientation="vertical">
 
