--- a/app/src/main/res/layout/fragment_pronunciation_main.xml
+++ b/app/src/main/res/layout/fragment_pronunciation_main.xml
@@ -59,7 +59,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                tools:src="@drawable/colors" />
+                tools:src="@drawable/colors_p" />
 
             <ImageView
                 android:id="@+id/bodyParts"
@@ -72,7 +72,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                tools:src="@drawable/numbers" />
+                tools:src="@drawable/numbers_p" />
 
 
         </LinearLayout>
