--- a/app/src/main/res/layout/vocabulary_words_menu_layout.xml
+++ b/app/src/main/res/layout/vocabulary_words_menu_layout.xml
@@ -13,5 +13,5 @@
         android:layout_width="200dp"
         android:layout_height="120dp"
         app:riv_corner_radius="20dp"
-        tools:src="@drawable/feelings" />
+        tools:src="@drawable/questions" />
 </RelativeLayout>
