--- a/app/src/main/res/layout/vocabulary_words_menu_layout.xml
+++ b/app/src/main/res/layout/vocabulary_words_menu_layout.xml
@@ -5,13 +5,20 @@
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
     card_view:cardCornerRadius="10dp">
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/icon"
-        android:layout_width="200dp"
-        android:layout_height="120dp"
-        app:riv_corner_radius="20dp"
-        tools:src="@drawable/questions" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/icon"
+            android:layout_width="200dp"
+            android:layout_height="120dp"
+            app:riv_corner_radius="20dp"
+            tools:src="@drawable/questions" />
+
+    </LinearLayout>
+
 </RelativeLayout>
