--- a/app/src/main/res/layout/fragment_cultural_music_main.xml
+++ b/app/src/main/res/layout/fragment_cultural_music_main.xml
@@ -28,12 +28,22 @@
 
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:id="@+id/mus"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:src="@drawable/cultural_songs_n" />
+            android:src="@drawable/music" />
+
+        <ImageView
+            android:id="@+id/vid"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/video" />
 
     </RelativeLayout>
 
