--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 <color name="colorPrimaryDark">#F45145</color>
 <color name="colorAccent">#F3CC58</color>
 <color name="colorDeletionBg">#83E57373</color>
+    <color name="textError">#fca40d08</color>
 
 <color name="colorDarkGray">#a2a2a2</color>
 <color name="chat_box_left">#fff9c0</color>
