--- a/app/src/main/res/layout/highscore_layout.xml
+++ b/app/src/main/res/layout/highscore_layout.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/place"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -44,7 +44,7 @@
                 android:id="@+id/Username"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -61,7 +61,7 @@
                 android:id="@+id/score"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="30sp"
                 android:gravity="center"
                 android:textStyle="bold"
