--- a/app/src/main/res/layout/fragment_highscore.xml
+++ b/app/src/main/res/layout/fragment_highscore.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.BodyPartsMainFragment"
-    android:background="@drawable/bg">
+    android:background="@drawable/new_highscore_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:padding="20dp"
-        android:background="@drawable/highscore_bg"
         android:layout_marginBottom="20dp"
         android:orientation="vertical">
 
@@ -22,7 +21,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="4"
-            android:layout_marginTop="80dp"
+            android:layout_margin="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +35,7 @@
                     android:id="@+id/place"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:gravity="center"
@@ -54,7 +53,7 @@
                     android:id="@+id/Username"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:gravity="center"
@@ -71,7 +70,7 @@
                     android:id="@+id/score"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     android:gravity="center"
                     android:textStyle="bold"
